--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,12 @@ body {
 
 .nodata {
 	background:#F100C6;
+    font-size: smaller;
+}
+
+.disabled {
+    background: #9AAEDB;
+    font-size: smaller;
 }
 
 .dataok {
