--- a/css/pages/waterlevel2.css
+++ b/css/pages/waterlevel2.css
@@ -8,8 +8,6 @@
 	height: 520px;
 	width:30%;	
 	overflow: scroll;
-	font-size: 9px;
-	
 }
 
 #waterlevel-table table {
@@ -23,6 +21,7 @@
 	border-style:dotted;
 	border-spacing:0;
 	border-width:1px;
+	font-size: x-small;
 }
 
 .legend {
