Added Device View Data in Device Monitoring. Table Form

--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -1,48 +1,47 @@
-#map-canvas { 
-	height: 720px;
-	min-width: 1024px;
-	width:100%;
-	margin:0px;
-
+#map-canvas {
+height: 720px;
+min-width: 1024px;
+width:100%;
+margin:0px;
 }
-
-
-
 .divrowwrapper {
-	/*float:left;*/
-	display: inline-block;
+/*float:left;*/
+display: inline-block;
 }
-
 .legend {
-    margin: 4px;
-    white-space: nowrap;
-    clear: both;
+margin: 4px;
+white-space: nowrap;
+clear: both
 }
-
 .legend img {
-    width: 24px;
+width: 24px;
 }
-
 .legendtitle {
-    clear: both;
-    font-weight: bolder;
-    text-align: center;
+clear: both;
+font-weight: bolder;
+text-align: center;
 }
-
 #togglelegends {
-    margin: 10px;
-    clear: both;
+margin: 10px;
+clear: both;
 }
-
 #legends {
-	background: rgba(220, 220, 255, 0.5);
-    padding: 6px;
+background: rgba(220, 220, 255, 0.5);
+padding: 6px;
 }
-
 #legends #togglelegends {
-	background:#2869E1;
-	color:white;
-	border:0;
-	border-radius:5px;
-	float:left;
+background:#2869E1;
+color:white;
+border:0;
+border-radius:5px;
+float:left;
+}
+#view-data-dialog #chart-div {
+/*width: 240px;*/
+max-width: 960px;
+max-height:420px;
+min-height: 180px;
+width: 100%;
+background-repeat:no-repeat;
+background-position: center center;;
 }
