--- a/css/pages/rainfall.css
+++ b/css/pages/rainfall.css
@@ -8,6 +8,7 @@
 	border-width: 1px;
 	border-color: black;
 	padding: 3px;
+	font-size: smaller;
 }
 
 td.textalignright {
@@ -16,4 +17,9 @@ td.textalignright {
 
 #config label, #config input,  #config button,  #config span {
 	vertical-align: top;
+}
+
+.rain-chart {
+	width: 700px;
+	height: 320px;
 }
