Updated css sprite, Marker now using sprite

--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -5,10 +5,8 @@ width:100%;
 margin:0px;
 }
 .divrowwrapper {
-/*float:left;*/
 display: inline-block;
 }
-
 #togglelegends {
 margin: 10px;
 clear: both;
@@ -25,48 +23,45 @@ border-radius:5px;
 float:left;
 }
 #view-data-dialog #chart-div {
-/*width: 240px;*/
 max-width: 960px;
 max-height:420px;
 min-height: 180px;
 width: 100%;
 background-repeat:no-repeat;
-background-position: center center;;
+background-position: center center;
 }
-
 .sprite { background-image: url('../../images/Devices_LegendUI.png'); background-color: transparent; background-repeat: no-repeat; }
 .notok { width: 32px; height: 37px; background-position: 0px 0px; }
-.rain1-notok { width: 32px; height: 37px; background-position: -32px 0px; }
-.rain1 { width: 32px; height: 37px; background-position: -64px 0px; }
-.rain2-notok { width: 32px; height: 37px; background-position: -96px 0px; }
-.rain2 { width: 32px; height: 37px; background-position: -128px 0px; }
-.vaisala-notok { width: 32px; height: 37px; background-position: -160px 0px; }
-.vaisala { width: 32px; height: 37px; background-position: -192px 0px; }
-.waterlevel-notok { width: 32px; height: 37px; background-position: -224px 0px; }
-.waterlevel { width: 32px; height: 37px; background-position: -256px 0px; }
-.waterlevel2-notok { width: 32px; height: 37px; background-position: -288px 0px; }
-.waterlevel2 { width: 32px; height: 37px; background-position: -320px 0px; }
-
+.rain-unknown { width: 32px; height: 37px; background-position: 0px -37px; }
+.rain1-notok { width: 32px; height: 37px; background-position: 0px -74px; }
+.rain1 { width: 32px; height: 37px; background-position: 0px -111px; }
+.rain2-notok { width: 32px; height: 37px; background-position: 0px -148px; }
+.rain2 { width: 32px; height: 37px; background-position: 0px -185px; }
+.vaisala-notok { width: 32px; height: 37px; background-position: 0px -222px; }
+.vaisala { width: 32px; height: 37px; background-position: 0px -259px; }
+.waterlevel-notok { width: 32px; height: 37px; background-position: 0px -296px; }
+.waterlevel { width: 32px; height: 37px; background-position: 0px -333px; }
+.waterlevel2-notok { width: 32px; height: 37px; background-position: 0px -370px; }
+.waterlevel2 { width: 32px; height: 37px; background-position: 0px -407px; }
 .legend {
-	margin: 0 auto;
-	white-space: nowrap;
-	clear: both;
- 	vertical-align:middle; 
+margin: 0 auto;
+white-space: nowrap;
+clear: both;
+vertical-align:middle;
 }
-
 .legendtitle {
-	clear: both;
-	font-weight: bolder;
-	text-align: center;
-	padding-top: 10px;
-	padding-bottom: 6px;
+clear: both;
+font-weight: bolder;
+text-align: center;
+padding-top: 10px;
+padding-bottom: 6px;
 }
 .legendicon {
-	display: inline-block;
-	vertical-align: middle;
-	margin-right: 4px;
+display: inline-block;
+vertical-align: middle;
+margin-right: 4px;
 }
 .legendtext {
-	display: inline-block;
-	vertical-align: middle;
+display: inline-block;
+vertical-align: middle;
 }
