Added Waterlevel Chart for Devices Monitoring Updated Gridlines date format for Rain Chart for Devices Monitoring

--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -73,7 +73,8 @@ background-position: center center;
 	max-height:420px;
 }
 
-#view-data-dialog #chart-div.dialog--rain {
+#view-data-dialog #chart-div.dialog--rain,
+#view-data-dialog #chart-div.dialog--waterlevel {
 	width: 1000px;
 	height: 400px;
 }
