--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -78,3 +78,9 @@ background-position: center center;
 	width: 1000px;
 	height: 400px;
 }
+
+#controls {
+	background-color: rgba(220, 220, 255, 0.5);
+	padding: 5px;
+	margin: 2px;
+}
