--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -13,7 +13,7 @@ clear: both;
 }
 #legends {
 background: rgba(220, 220, 255, 0.5);
-padding: 6px;
+padding: 12px;
 }
 #legends #togglelegends {
 background:#2869E1;
@@ -57,6 +57,7 @@ margin-right: 4px;
 .legendtext {
 display: inline-block;
 vertical-align: middle;
+margin-left: 3px;
 }
 
 #view-data-dialog #chart-div {
