--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -92,7 +92,7 @@
     font-size: 8pt;
     background: #2869E1;
     margin: 0px;
-    padding: 2px;
+    padding: 3px 5px 0;;
 }
 
 .divrowwrapper {
