--- a/css/screen.css
+++ b/css/screen.css
@@ -70,7 +70,7 @@ img {
 	display:block;
 	float:left;
 	margin:0 0 0 1px;
-	padding:3px 10px;
+	padding:10px;
 	text-align:center;
 	background:#0089E9;
 	color:#FFF;
