Added download as CSV

--- a/css/pages/devices.css
+++ b/css/pages/devices.css
@@ -23,6 +23,39 @@ border-radius:5px;
 float:left;
 }
 
+#downloadCSV {
+	display: inline-block;
+	border-top: 1px solid #96d1f8;
+	background: #65a9d7;
+	background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+	background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+	background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+	background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+	background: -o-linear-gradient(top, #3e779d, #65a9d7);
+	padding: 4.5px 9px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+	-webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	-moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	box-shadow: rgba(0,0,0,1) 0 1px 0;
+	text-shadow: rgba(0,0,0,.4) 0 1px 0;
+	color: white;
+	font-size: 12px;
+	font-family: Helvetica, Arial, Sans-Serif;
+	text-decoration: none;
+	vertical-align: middle;
+	margin: 5px;
+}
+#downloadCSV:hover {
+	border-top-color: #97d1f7;
+	background: #97d1f7;
+	color: #363636;
+}
+#downloadCSV:active {
+	border-top-color: #1b435e;
+	background: #1b435e;
+}
 .sprite { background-image: url('../../images/Devices_LegendUI.png'); background-color: transparent; background-repeat: no-repeat; }
 .notok { width: 32px; height: 37px; background-position: 0px 0px; }
 .rain-unknown { width: 32px; height: 37px; background-position: 0px -37px; }
