--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -200,7 +200,7 @@
 
 #feeds {
     position: relative;
-    background-color: #57b8e8;
+    background-color: #2693f0;
     padding: 2px;
     display: block;
     overflow: auto;
@@ -208,21 +208,17 @@
 }
 
 .feedcontainer {
+    margin: 5px 5px 10px;
+    vertical-align: top;
+    display: inline-block;
     position: relative;
     background-color: #0089e9;
-    margin: 2px;
-    padding: 5px 20px 10px;
+    padding: 5px 20px 18px;
     width: 400px;
     /*height: 200px;*/
     overflow: auto;
     border-radius: 10px;
-}
 
-.feedcontainer h2 {
-    letter-spacing: 1px;
-}
-
-#feed24hourweather {
     font-size: 18px;
     word-spacing: 2px;
     color: #000000;
@@ -231,30 +227,67 @@
     font-variant: normal;
     text-transform: none;
 }
-#feed24hourweather h1 {
+
+.feedcontainer h2 {
+    letter-spacing: 1px;
+}
+
+.feedcontainer h1 {
     font-size: smaller;
     font-weight: bolder;
     line-height: 1em;
 }
 
-#feed24hourweather h2 {
+.feedcontainer h2 {
     font-size: x-small;
     font-weight: bold;
     color: #1c1c1c;
 }
 
-#feed24hourweather h2 span,  #feed24hourweather span, #feed24hourweather a{
+.feedcontainer span, .feedcontainer a{
     font-weight: normal;
     font-size: x-small;
     color: #fafafa;
 }
 
-#feed24hourweather a{
+.feedcontainer a{
     text-decoration: underline;
     color: white;
 }
 
-#feed24hourweather p {
+.feedcontainer p {
     font-weight: lighter;
 }
 
+.effect6
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect6:before, .effect6:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect6:after
+{
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+    -moz-transform:skew(8deg) rotate(3deg);
+    -ms-transform:skew(8deg) rotate(3deg);
+    -o-transform:skew(8deg) rotate(3deg);
+    transform:skew(8deg) rotate(3deg);
+}
