--- a/css/pages/riverbasin.css
+++ b/css/pages/riverbasin.css
@@ -109,14 +109,63 @@
 }
 
 #legends {
-    background: rgba(220, 220, 255, 0.5);
-    padding: 6px;
+    text-align: left;
+    width: 230px;
+    margin-left: 10px;
 }
 
 #legends #togglelegends {
-    background: #2869E1;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    float: left;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+    margin-left: 190px;
 }
+#legends h1 {
+    font-size: small;
+    padding-left: 6px;
+    margin: .2em 0 .2em 0;
+}
+
+#legends .legend img {
+    margin-right: 12px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#legends .legend span{
+    vertical-align: middle;
+    font-size: smaller;
+}
+
+#legends .legend {
+    display: block;
+    margin-bottom: 2px;
+}
+
+.custom-ctrl {
+    background-color : #fff;
+    border : 2px solid #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px rgba(0,0,0,.3);
+    cursor: pointer;
+    margin-bottom: 22px;
+    text-align: center;
+
+    color: rgb(25,25,25);
+    font-family: Roboto,Arial,sans-serif;
+    font-size: 16px;
+    line-height: 38px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.custom-ctrl button {
+    background-color: #f5f5f5;
+    border: 2px solid rgba(255, 255, 255, 0);
+    cursor: pointer;
+}
+
+.custom-ctrl button.active {
+    background-color: #e1e1e1;
+}
+
