Waterlevel Map and River Basin now updated to latest source

--- a/css/pages/waterlevel2.css
+++ b/css/pages/waterlevel2.css
@@ -95,6 +95,11 @@
 #riverbasins {
 	text-align: left;
 	font-size: small;
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	z-index: 99;
+	width: 200px;
 }
 
 #riverbasins ul {
