--- a/css/screen.css
+++ b/css/screen.css
@@ -161,6 +161,14 @@ img {
     position: relative;
 }
 #footer p {
-	padding:10px;
+	padding: 5px 0 0 5px;
 	margin:0;
+	font-size: small;
+	font-weight: bold;
+}
+
+#footer > p:nth-child(2) {
+	font-size: smaller;
+	font-weight: normal;
+	padding: 10px 0 5px 5px;
 }
