--- a/css/pages/waterlevel.css
+++ b/css/pages/waterlevel.css
@@ -6,10 +6,13 @@
 	width:400px;
 	height:300px;
 	margin:2px;
+	padding: 0;
 	display:inline-block;
 	position: relative;
 	float: left;
 }
+
+
 
 .chart_header {
 	width: 100%;
@@ -94,6 +97,7 @@
 #beta-info {
 	display: block;
 	height: 30px;
+	margin: 10px;
 	padding: 5px 5px 5px;
 	font-weight: bold;
 	position: relative;
@@ -101,4 +105,8 @@
 #beta-info span:last-child {
 	position: absolute;
 	right: 5px;
+}
+
+#toggle {
+	margin: 0 0 0 20px;
 }
